<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical"
    tools:context="com.blestep.sportsbracelet.activity.SystemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/grey_f4f4f4">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/bracelet_system"
            android:textColor="@color/grey_323232"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/bracelet_reset" />

    <View style="@style/divider_line" />

    <LinearLayout
        android:id="@+id/ll_unit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/bracelet_unit" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracelet_unit_metric" />
    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/bracelet_time_format" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracelet_time_format_24" />
    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:id="@+id/ll_light"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/bracelet_light_switch" />

        <TextView
            android:id="@+id/tv_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracelet_light_off" />
    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:id="@+id/ll_heart_heart_rate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="心率设置" />

        <TextView
            android:id="@+id/tv_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="20分钟" />
    </LinearLayout>

    <View style="@style/divider_line" />
</LinearLayout>
