<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/grey_f4f4f4">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/alarm_period_repeat"
            android:textColor="@color/grey_323232"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_alarm_finish"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:text="@string/alarm_finish"
            android:textColor="@color/blue_40acaf"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_alarm_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_ffffff"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_alarm_period_sunday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_sunday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_monday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_monday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_tuesday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_tuesday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_wednesday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_wednesday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_thursday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_thursday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_friday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_friday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />

        <CheckBox
            android:id="@+id/cb_alarm_period_saturday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:button="@null"
            android:checked="false"
            android:drawableRight="@drawable/alarm_checked_selector"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/alarm_every_saturday"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <View style="@style/divider_line" />
    </LinearLayout>
</LinearLayout>