<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg_history_bottom_tab_parent"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/grey_f2f2f2"
    android:gravity="center"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/rb_history_unit_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/history_radiobtn_selector"
        android:button="@null"
        android:checked="true"
        android:gravity="center"
        android:text="@string/tab_day"
        android:textColor="@drawable/history_radiobtn_text_selector"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/rb_history_unit_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@drawable/history_radiobtn_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/tab_week"
        android:textColor="@drawable/history_radiobtn_text_selector"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/rb_history_unit_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@drawable/history_radiobtn_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/tab_month"
        android:textColor="@drawable/history_radiobtn_text_selector"
        android:textSize="16sp" />

    <RadioButton
        android:id="@+id/rb_history_unit_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:background="@drawable/history_radiobtn_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/tab_year"
        android:textColor="@drawable/history_radiobtn_text_selector"
        android:textSize="16sp" />

</RadioGroup>